app/assets/stylesheets/application.scss
/* ... */
blockquote p, blockquote div {
  margin-bottom: 0em;
}

code {
  font-family: monospace;
  font-size: 1.2em;
}

dd {
  margin-bottom: 1em;
}

dt {
  font-weight: bold;
}

dt.bad {
  color: red;
}

h1 {
  font-size: 2em;
}

h1#static-index-header {
  font-size: 4em;
  margin: 1em 0 .5em 0;
  text-align: center;
}

h1#static-index-header a {
  text-align: center;
  display: block;
  font-size: 0px;
  text-indent: -3000em;
  margin: 0;
  padding:75px 300px 75px 300px;
  background: transparent image-url("logo.png") no-repeat scroll center center;
}

h2 {
  font-size: 1.8em;
}

h2.wiki-title {
  color: #003DD8;
  margin-bottom: 0.25em;
}

h2#site-title {
  display: block;
  text-align: left;
}

div#title {
  margin: 0 0 .5em -3em;
  height: 75px;
}
h2#site-title img#logo {
  float: left;
}

h2#site-title span {
  display: block;
  padding: 1em 0 0 0;
  text-align: left;
  margin: 0;
}

div#static-more div#title {
  float: none;
  margin-top: -1em;
}

#site-link {
  display: block;
  font-size: 0px;
  background: transparent image-url("logo_small.png") no-repeat scroll top left;
  margin: 0 0 .5em 0;
  padding: 37px 242px 38px 242px;
}

h3 {
  font-size: 1.6em;
}

h4 {
  font-size: 1.4em;
}

h5 {
  font-size: 1.2em;
}

h6 {
  font-size: 1em;
}

img {
  border: none;
  vertical-align: middle;
}

input {
  padding: 0 0.3em;
}

/* Unlike just about every other browser, WebKit puts the filename of file input elements
 * on the page background, instead of on a white box.  We need to set it to a light color
 * to make it visible, and we need to do this only on WebKit--if we set other browsers to
 * white, it'll be unreadable on the white background. */
HTML.webkit input[type=file] {
  color: #FFF;
}

input[type=password]:focus {
  background: #FFC;
	color: #000;
}

input[type=text]:focus {
  background: #FFC;
	color: #000;
}

label {
  font-weight: bold;
  white-space: nowrap;
}

li {
  margin-left: 1em;
}

ol {
  margin-left: 1em;
}

p {
  margin-bottom: 1em;
}

span.author {
  color: gray;
}

span.date {
  color: #AAA;
}

span.date a {
  color: #AAA;
}

span.group {
  margin-right: 1em;
}

span.locked-topic {
  color: #666;
}

span.informational {
  cursor: help;
}

span.post-count {
  color: #AAA;
}

a.thumb {
  display: block;
  text-align: center;
  vertical-align: middle;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
}

span.plid {
  display: none;
}

span.unread-topic {
  font-weight: bold;
}

span.stars .star {
	font-family: "Zapf Dingbats", "Apple Symbols", sans-serif;	/* on OS X 10.4, different fonts are used as fallbacks for the full and empty star characters, so let's make sure we use a font that has them at the same size */
}

span.vote-desc {
	color: #888;
	margin-left: 0.5em;
	position: absolute;
}

strong.divider {
  font-weight: bold;
  color: gray;
}

table {
  margin-bottom: 2em;
}

table.form {
  width: 70em;
}

table.form p {
  font-size: 0.8em;
  font-weight: normal;
  margin: 0;
  padding: 0;
}

table.form th {
  color: white;
  white-space: normal;
  padding-right: 1em;
  text-align: right;
  background: #333;
}

table.highlightable {
}

table.highlightable > tbody > tr:hover {
  background: #67100F;
}

table.highlightable th {
}

table.highlightable td {
}

table.highlightable th {
  margin: 0;
}

table td {
  padding: 1px 4px;
  vertical-align: top;
}

/*table td.large-text p {
  font-size: 1em;
}*/

table th {
  font-weight: bold;
  text-align: left;
  vertical-align: top;
  padding: 0.2em 0.5em;
  white-space: nowrap;
}

table tr.bad {
  background: rgb(255, 230, 230);
}

table tr.even {
  color: white;
  background: #444 ;
}

table tr.good {
/*  background: rgb(230, 255, 230); */
}

tr.odd {
  color: white;
  background: #333;
}

table tr.selected {
  background: #044 !important; /* override highlightable */
}

table tr.highlight {
  background: #67100F;
}

table tr.pending-tag {
  background: #503030;
}

textarea {
  display: block;
  padding: 0 0.3em;
  font-family: sans-serif;
  font-size: 1.2em;
}

textarea.no-block {
  display: inline;
}

textarea:focus {
  background: #FFC;
  color: #000;
}

ul {
  margin: 0 0 1em 0em;
}

ul.bare-list li {
  list-style-type: none;
}

/* This is !important to override things like ul#subnavbar li. */
.hide-advanced-editing .advanced-editing { display: none !important; }

#main-menu .menu {
  display: inline;
  position: relative;
  padding: 0px 2px 1px 2px;
  margin-right: 0.6em;
}
#main-menu a:focus {
  /* XXX: isn't working in IE7 */
  outline: none;
}
#main-menu .selected-menu {
  background: #ffffff;
}
#main-menu .current-menu > A {
  color: #ffbbbb;
}
#main-menu .selected-menu > A {
  color: #000000;
}
#main-menu .bolded {
  font-weight: bold;
}
#main-menu .unread-topic {
  font-weight: bold;
}
.dropdown-menu .separator {
  width: 100%;
  background: #AAAAAA;
  height: 1px;
  margin: 1px 0px;
  /* For IE7: */
  overflow: hidden;
}
.dropdown-menu {
  position: absolute;
  background: #000000;
  padding: 2px 2px;

  /* Some items, like forum titles, may be very long.  Clamp the box size. */
  max-width: 20em;
  overflow: hidden;

  /* Dropdowns should render over most page elements, like the avatar crop overlay, but
   * not on top of the login overlay. */
  z-index: 100;
  border: 1px solid #555555;
}
.dropdown-menu .submenu {
  display: block;
  width: auto;
  padding: 0px 2px;
  font-size: 140%;
}
.dropdown-menu .focused-menu-item {
  background: #ffffff;
  color: #000000;
}

ul.flat-list {
  display: block;
  margin: 0;
  padding: 0;
}

ul.flat-list li {
  display: inline;
  list-style-type: none;
  font-weight: bold;
  padding: 0;
  margin: 0 1em 0 0;
}

ul.flat-list li a {
  font-weight: normal;
}

div.forum-update a {
  font-weight: bold;
}

div.comments-update a {
  font-weight: bold;
}

ul.flat-list li a.mod-pending {
  font-weight: bold;
}

ul.link-page {
  font-size: 1.2em;
  font-weight: bold;
}

ul.link-page a:before {
  content: '» ';
}
/* ... */

